# hexis

./: AGENTS.md  ARCHITECTURE-DEFERRED.md  ARCHITECTURE.md  Cargo.toml  README.md  devshell.nix  flake.nix
checks/: default.nix
nix/: home-module.nix  wrap.nix
src/: agent.rs  config.rs  declared.rs  drift.rs  error.rs  lib.rs  live.rs  main.rs  plan.rs  proposer.rs  reconciler.rs  snapshot.rs  supervisor.rs  types.rs
tests/: declared.rs  drift.rs  live.rs  plan.rs  reconciler.rs  scaffold.rs  snapshot.rs  types.rs
