[package]
name = "hexis-cli"
version = "0.1.0"
edition = "2024"
description = "Managed-mutable config reconciliation with per-key modes"
license-file = "LICENSE.md"
repository = "https://github.com/LiGoldragon/hexis"

[[bin]]
name = "hexis"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
ractor = { version = "0.15", features = ["async-trait"] }
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
