[package]
name = "hexis-cli"
version = "0.1.0"
edition = "2024"
description = "Managed-mutable config reconciliation with per-key modes"
license-file = "LICENSE.md"
repository = "https://github.com/LiGoldragon/hexis"

[[bin]]
name = "hexis"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive"] }
fs2 = "0.4"
json-patch = "4"
ractor = { version = "0.15", features = ["async-trait"] }
serde_json = { version = "1", features = ["preserve_order"] }
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
